Refactored log view

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -195,7 +195,7 @@
           <!--{{ nav_link('contexts_list', 'Küsimuste kontekstid', True) }}-->
           {{ nav_link('users_list', 'Kasutajad') }}
           {{ nav_link('groups_list', 'Grupid') }}
-          {{ nav_link('log_viewer', 'Tegevus logi', True) }}
+          {{ nav_link('log_viewer', 'Nupulogi') }}
           {{ nav_link('statistics', 'Statistika') }}
         </ul>
       </div>
