Refactored groups view and updated sessions view javascript

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -155,15 +155,12 @@
         transform: translateX(26px);
       }
 
-      .list-table {
-
-      }
-
       #addBtn {
         width: 3rem;
         float: right;
         margin-right: 3rem;
         margin-top: 1rem;
+        cursor: pointer;
       }
     </style>
 
