--- a/src/templates/groups.html
+++ b/src/templates/groups.html
@@ -1,4 +1,79 @@
 {% extends "base.html" %}
+{% block react %}
+  var realPython = React.createClass({
+    getInitialState () {
+      return {
+        groups: null,
+        fetching: false
+      };
+    },
+    componentDidMount: function() {
+      this.fetchUpdate();
+      this.timerID = setInterval(
+        this.fetchUpdate.bind(this),
+        1000
+      );
+    },
+    fetchUpdate: async function() {
+      if (this.fetching) return;
+      try {
+        this.setState({fetching: true});
+        response = await axios.get('/api/v1/groups');
+        const groups = response.data
+        this.setState({
+          groups: groups.groups,
+        });
+      } catch (error) {
+        if (error.response) {
+          console.log("Request to server failed with code " + error.response.status)
+        } else {
+          console.log("Request to server failed!", error)
+        }
+      } finally {
+        this.setState({fetching: false});
+      }
+    },
+    componentWillUnmount: function() {
+      clearInterval(this.timerID);
+    },
+    performDelete: function (id, name) {
+        if (confirm("Kas oled kindel, et tahad kustutada gruppi \"" + name + "\"?")) {
+          axios.delete('/api/v1/groups/' + id).then((resp) => {
+              console.log("Group deleted!", resp);
+          }).catch((err) => {
+              console.log("Error happened!", err);
+          });
+        }
+    },
+    render() {
+      return (
+        <div  className="row list-table">
+          <div className="col-10 session-list">
+            <div className="row session-header">
+              <p className="col-4">Nimi</p>
+              <p className="col-8">Liikmed</p>
+            </div>
+            {this.state.groups && this.state.groups.map((group, i) => (
+              <div id="group-{{i}}" className="row session-row">
+                <p className="col-4">{group.description}</p>
+                <p className="col-8">
+                  {group.users.map((user, j) => (
+                    <p id="user-{{j}}">{user.username}</p>
+                  ))}
+                </p>
+              </div>
+            ))}
+          </div>
+        </div>
+      );
+    }
+  });
+
+  ReactDOM.render(
+    React.createElement(realPython, null),
+    document.getElementById('groups-list')
+  );
+{% endblock %}
 
 {% block scripts %}
       function newGroup() {
@@ -9,50 +84,78 @@
             users.push(selectBox[x].value)
           }
         }
-        fetch("/api/v1/groups", {
-          method: "POST",
-          body: JSON.stringify({
-            description: document.getElementById("desc").value,
-            users: users
-          }),
-          headers: {'Accept': 'application/json'}
-        }).then(response => {
-          console.log(response.text);
-          location.reload();
+
+        axios.post(
+            "/api/v1/groups",
+            JSON.stringify({
+              description: document.getElementById("desc").value,
+              users: users
+            })
+        ).then((resp) => {
+            $('#groupModal').modal('hide');
+        }).catch((err) => {
+            if(err.response.status == 409) {
+              alert("Grupi loomine ebaõnnestus!\nVeateade: " + err.response.data);
+            } else {
+              alert("Grupi loomine ebaõnnestus!");
+            }
+            console.log(err);
         });
+      }
+
+      function filterKeypress(event) {
+        if (event.keyCode == 13) {
+          event.preventDefault();
+          newGroup();
+        }
       }
 {% endblock %}
 
 {% block content %}
-  <div class="jumbotron">
+  <img src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Add-icon.png" id="addBtn" data-toggle="modal" data-target="#groupModal"/>
 
-    <form name="new-group-form">
-      <div class="form-group">
-        <label>
-          Grupi kirjeldus/Grupi nimi
-        </label>
-        <input id="desc" type="text" name="description" class="form-control">
+  <div class="modal fade" id="groupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Uue grupi loomine</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form name="new-group-form" onkeypress=filterKeypress(event)>
+            <div class="form-group">
+              <label>
+                Grupi kirjeldus/Grupi nimi
+              </label>
+              <input id="desc" type="text" name="description" class="form-control">
+            </div>
+            <div class="form-group">
+              <label>Liikmed</label>
+              <select multiple="multiple" id="users-select" class="form-control">
+                {% for user in users %}
+                  <option value="{{user.id}}">{{user.username}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button onclick= newGroup() class="btn btn-primary">
+            Loo uus grupp
+          </button>
+        </div>
       </div>
-      <div class="form-group">
-        <label>Liikmed</label>
-        <select multiple="multiple" id="users-select" class="form-control">
-          {% for user in users %}
-            <option value="{{user.id}}">{{user.username}}</option>
-          {% endfor %}
-        </select>
-      </div>
-    </form>
-    <button onclick= newGroup() class="btn btn-primary">
-      Loo uus grupp
-    </button>
-  </div>
-    <div class="container">
-    {% for group in groups %}
-      <ul class="list-group row">
-        <li class="list-group-item col-6">Kirjeldus/Nimi: {{group.description}}</li>
-        <li class="list-group-item col-6">Liikmed: {{group.users|join(', ')}}</li>
-      </ul>
-      <br>
-    {% endfor %}
     </div>
+  </div>
+
+  <script>
+    $('#groupModal').on('shown.bs.modal', function () {
+      $('#desc').focus()
+    })
+  </script>
+
+  <div id="groups-list">
+  </div>
 {% endblock %}
