Removed last page reloading script.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,27 +14,10 @@
       .navbar {
           font-size: x-large;
       }
-      .mb-3 {
-        margin-top: 1rem !important;
-        margin-bottom: 0rem !important;
-        margin-right: 1rem !important;
-      }
-      .col-5 {
-        padding-right: 0px;
-        padding-left: 0px;
-      }
-      .card {
-        border-color: #FF851B
-      }
-      .hidden {
-        display:none;
-      }
+
       .button-orng {
         background-color: #FF851B;
         border-color: #FF851B;
-      }
-      .card-link {
-        color: #FF851B;
       }
 
       .session-list {
@@ -161,6 +144,15 @@
         margin-right: 3rem;
         margin-top: 1rem;
         cursor: pointer;
+      }
+
+      .fill-percentage {
+        position: absolute;
+        text-align: right;
+        margin-right: 2rem;
+        top: 16rem;
+        font-size: 10rem;
+        color: #FF851B;
       }
     </style>
 
